--- a/public/index.html
+++ b/public/index.html
@@ -312,7 +312,7 @@
                 <!-- Hero Section -->
                 <div class="text-center mb-16">
                     <h1 class="text-4xl md:text-6xl font-extrabold text-gray-900 mb-6">
-                        Welcome to <span class="text-blue-600">DiabetesCare</span>
+                        Welcome to <br> <span class="text-green-600">The Clinic </span><span class="text-blue-600">DiabetesCare</span>
                     </h1>
                     <p class="text-xl md:text-2xl text-gray-600 mb-8 max-w-3xl mx-auto">
                         Professional telemedicine platform connecting patients with certified diabetes specialists
